[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemies/crow/shit.gd" type="Script" id=1]
[ext_resource path="res://Enemies/crow/shit.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 4 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 0.0

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.377246, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0.768627, 0.133333, 0.501961 )

[node name="shit" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 6
script = ExtResource( 1 )

[node name="RemoveTimer" type="Timer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="PoopArea" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2( 0, 8 )
shape = SubResource( 2 )

[node name="drops" type="CPUParticles2D" parent="."]
amount = 3
emission_shape = 1
emission_sphere_radius = 10.0
gravity = Vector2( 0, -90 )
scale_amount = 10.0
color = Color( 0.733333, 0.733333, 0.733333, 1 )
color_ramp = SubResource( 3 )

[connection signal="timeout" from="RemoveTimer" to="." method="_on_RemoveTimer_timeout"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
